[package]
name = "parse-frequency"
version = "1.0.0"
edition = "2024"
authors = ["Daxanius"]
description = "A simple library to parse frequency strings into a frequency in Hz."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Daxanius/parse-frequency"
homepage = "https://github.com/Daxanius/parse-frequency"
keywords = ["frequency", "parser", "cli", "units", "clap"]
categories = ["command-line-utilities", "value-formatting"]
exclude = [".vscode", ".github"]

[package.metadata.clippy]
lints = ["clippy::pedantic"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
clap = { optional = true, version = "4", features = ["derive"] }
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
clap = ["dep:clap"]
serde = ["dep:serde"]
