[package]
name = "parse-frequency"
version = "1.1.0"
edition = "2024"
authors = ["Daxanius"]
description = "A simple library to parse frequency strings into a frequency in Hz."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Daxanius/parse-frequency"
homepage = "https://github.com/Daxanius/parse-frequency"
keywords = ["frequency", "parser", "cli", "units", "clap"]
categories = ["command-line-utilities", "value-formatting"]
exclude = [".vscode", ".github"]

[package.metadata.clippy]
lints = ["clippy::pedantic"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
serde = { version = "1.0", optional = true }
num-traits = { version = "0.2", optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
clap = ["dep:clap"]
serde = ["dep:serde"]
num-traits = ["dep:num-traits"]
